--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -124,7 +124,7 @@
   display: flex;
   justify-content: center;
 }
-ul {
+li {
   list-style-type: none;
 }
 .date-div, .debit-div, .category-div {
